hw4/deploy/k8s/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: http-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
      labels:
        app: http-server
    spec:
      containers:
        - name: http-server
          imagePullPolicy: Always
          image: naturegong/http_server
          ports:
            - containerPort: 8080
          lifecycle:
            postStart:
              exec:
                command: ['/bin/sh', '-c', 'echo http-server Start...']
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: log-storage
              mountPath: /logs
      volumes:
        - name: log-storage
          emptyDir:
            sizeLimit: 40Mi

---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: http-server

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-ingress
  annotations:
    kubernetes.io/ingress.allow-http: 'true'
spec:
  tls:
    - hosts:
        - http-server.naturegong.com
      secretName: http-server-tls-secret
  rules:
    - host: http-server.naturegong.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: http-server-service
                port:
                  number: 8080
